<resources>
    <string name="app_name">Kairos</string>
    <string name="image" />
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="delete">Delete</string>
    <string name="warning">Check your connection and try again.</string>
    <string name="retry">Retry</string>
</resources>
