<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/image" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_delete"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/temperature"
            android:id="@+id/textViewTemp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/condition"
            android:id="@+id/textViewCondition"
            android:layout_below="@+id/textViewTemp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"
            android:id="@+id/textViewCity"
            android:layout_below="@+id/textViewCondition"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
